<resources>
    <string name="app_name">AIS-Devices</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main_creator">Add new device</string>
    <string name="creator_welcome_text">Connect your new device to the mains.\n\nStart pairing mode by <b>quickly pressing 4 times on the device.</b> The LED will be blinking during pairing.\n\nIn Next step will allow you to connect the device to your local WiFi network and add it to the list of devices in the application.\n\n</string>
    <string name="text_name_fragment">Enter a friendly name for the selected device (%1$s)</string>
    <string name="menu_add_new_device">Add device</string>
    <string name="new_device">New device</string>
    <string name="connect">Connect</string>
    <string name="back">Back</string>
    <string name="unknown_error">Unfortunately something went wrong</string>
    <string name="welcome_add_new_device">Add your new device</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="ap_data_info">Enter the data of your WiFi network to which you want to connect the new device</string>
    <string name="connecting_info">Select  \"Connect\" to start the process of connecting the device to your local network WiFi. During this process it is necessary to disconnect this device from the WiFi network, it will only take a moment.</string>
    <string name="save_password">Save password</string>
    <string name="connect_ap_timeout">Failed to connect to the selected device.</string>
    <string name="details">Details</string>
    <string name="ip_address">IP Address</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="delete_device_question">Remove device from aplication?</string>
    <string name="no">No</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="empty_name">Enter name</string>
    <string name="empty_ip">Enter IP/host of the device</string>
    <string name="device_website">Open device Web App</string>
    <string name="scan_network">Scan network</string>
    <string name="save_error">Error during save</string>
    <string name="save_error_info">Failed to save changes, check if the device is available and try again</string>
    <string name="ok">OK</string>
    <string name="connect_to_device">Connecting to the device</string>
    <string name="send_configuration">Configuring the device</string>
    <string name="waiting_for_device">Waiting for the device to connect to the local WiFi network</string>
    <string name="network_scan_1">Scanning the network for a device.</string>
    <string name="network_scan_2">Scanning the network for a device..</string>
    <string name="network_scan_3">Scanning the network for a device...</string>
    <string name="areas">Areas</string>
    <string name="menu_manage_areas">Area registry</string>
    <string name="area">Area</string>
    <string name="delete_area_question">Delete area?</string>
    <string name="Congratulations">Congratulations!</string>
    <string name="u_have_new_device">You have a new device</string>
    <string name="finish">OK</string>
    <string name="creator_area_info">Finally, you can assign them to an area</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="name_new_area">Enter a name for the new area:</string>
    <string name="pair_with_box">Pairing with a MQTT gateway</string>
    <string name="no_boxes_to_pair">No pairing MQTT gates available</string>
    <string name="pair_success">Paired successfully</string>
    <string name="pair_error">Unable to pair your device, please try again later</string>
    <string name="creator_start_button">Let\'s start!</string>
    <string name="select_new_device_from_list_text">Select your new device from the list</string>
    <string name="None">None</string>
    <string name="select_network">Select network</string>
    <string name="all_devices">All devices</string>
    <string name="select_area">Select area</string>
</resources>